@@ -1,3 +1,7 @@
+2008-12-31  higepon  <higepon@users.sourceforge.jp>
+
+        * Arithmetic.cpp (numberToString): Break dependency.
+
 2008-12-30  higepon  <higepon@users.sourceforge.jp>
 
         * scheme.h (MOSH_FATAL): Added.
